@@ -39,7 +39,7 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
 
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
-        mapper.add(new Integer(1));
+        mapper.add(Integer.valueOf(1));
         writeEngine.addHeaderTag("CopyTag", "copied");
         writeEngine.addHeaderTag(HEADER_TAG_METRIC_CYCLE_START, String.valueOf(System.currentTimeMillis()));
         
@@ -60,7 +60,7 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
+        mapper.add(Integer.valueOf(1));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
         
@@ -75,8 +75,8 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
-        mapper.add(new Integer(2));
+        mapper.add(Integer.valueOf(1));
+        mapper.add(Integer.valueOf(2));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
         
@@ -120,7 +120,7 @@ public class HollowWriteStateCreatorTest {
         
         repopulatedWriteStateEngine.prepareForNextCycle();
         repopulatedWriteStateEngine.addAllObjectsFromPreviousCycle();
-        new HollowObjectMapper(repopulatedWriteStateEngine).add(new Integer(3));
+        new HollowObjectMapper(repopulatedWriteStateEngine).add(Integer.valueOf(3));
         HollowReadStateEngine recreatedReadEngine = StateEngineRoundTripper.roundTripSnapshot(repopulatedWriteStateEngine);
 
         HollowObjectSchema schema = (HollowObjectSchema)recreatedReadEngine.getSchema("Integer");
@@ -143,8 +143,8 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
-        mapper.add(new Integer(2));
+        mapper.add(Integer.valueOf(1));
+        mapper.add(Integer.valueOf(2));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
 
